[package]
name = "wine-maker"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
eframe = "0.31.1"
egui = "0.31.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"

[target.'cfg(windows)']
rustflags = ["-C", "link-args=/SUBSYSTEM:windows"]
